fixed dark mode logo

--- a/assets/css/stylesheet_two.css
+++ b/assets/css/stylesheet_two.css
@@ -7407,6 +7407,29 @@ form[class*="user-"] .fieldgroup .fieldset-legend,
     z-index: 100;
   }
 }
+ /*if dark mode is preferred*/
+@media (min-width: 1200px) and (prefers-color-scheme: dark) {
+  .paragraph--type--basic-text.text-add-rdf-logo {
+    position: relative;
+  }
+  .paragraph--type--basic-text.text-add-rdf-logo:before {
+    content: "";
+    background: url(/assets/core/misc/rdf-vector-dark.svg) no-repeat
+      0 0;
+    background-size: contain;
+    display: block;
+    width: 856px;
+    height: 407px;
+    position: absolute;
+    bottom: 0;
+    right: -20%;
+    z-index: 50;
+  }
+  .paragraph--type--basic-text.text-add-rdf-logo .text-formatted {
+    position: relative;
+    z-index: 100;
+  }
+}
 
 .paragraph--type--media {
   overflow: hidden;
@@ -8185,6 +8208,8 @@ form[class*="user-"] .fieldgroup .fieldset-legend,
   width: 100%;
   max-width: 190px;
   height: auto;
+  /*align the svg to baseline*/
+  vertical-align: bottom ;
 }
 @media (max-width: 991.98px) {
   .block-system-branding-block svg {
@@ -9719,18 +9744,19 @@ header {
     max-width: 1140px;
   }
 }
-body.vliz-enable-background-waves main {
-  background: url(/assets/core/misc/swoosh_bg.svg) no-repeat
-    center center;
-  background-attachment: fixed;
-  background-size: 90% auto;
-}
 
 body.vliz-enable-background-graph main {
-  background: url(/assets/core/misc/graph_nodes_bg.svg) no-repeat
-    center center;
+  background: url(/assets/core/misc/graph_nodes_bg.svg) no-repeat center center;
   background-attachment: fixed;
   background-size: 100% auto;
+}
+
+@media (prefers-color-scheme: dark) {
+  body.vliz-enable-background-graph main {
+    background: url(/assets/core/misc/graph_nodes_bg_dark.svg) no-repeat center center;
+    background-attachment: fixed;
+    background-size: 100% auto;
+  }
 }
 
 #vlizimisfp * {
